It's ALIVEgit statusgit status!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.20)
 include(deps/pico-sdk/pico_sdk_init.cmake) # Has to be here
-project(CHV_DC31 C)
+project(CHV_DC31 C CXX ASM)
 
 add_subdirectory(deps)
 add_subdirectory(verification)
