--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -6,3 +6,4 @@ add_library(
     can2040/src/can2040.c
 )
 target_include_directories(can2040 PUBLIC can2040/src/)
+target_link_libraries(can2040 PUBLIC pico_stdlib cmsis_core)
