everything seems to build now

--- a/firmware/py/can2040_py/CMakeLists.txt
+++ b/firmware/py/can2040_py/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_mpy_c(can2040_py ${CMAKE_CURRENT_SOURCE_DIR}/can2040_bindings.c)
+add_mpy_c_module(can2040_py SRC ${CMAKE_CURRENT_SOURCE_DIR}/can2040_bindings.c DEPS can2040)
