--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 ########### rp2040 init ###########
-pico_sdk_init()
+# pico_sdk_init()
 
 ########### CAN2040 stuff ###########
 add_library(
@@ -11,25 +11,33 @@ target_include_directories(can2040 PUBLIC can2040/src/)
 target_link_libraries(can2040 PUBLIC pico_stdlib cmsis_core)
 
 ########### MicroPython stuff ###########
-set(MP_DIR "${CMAKE_CURRENT_LIST_DIR}/micropython/mpy-cross" CACHE STRING "" )
-set(MPY_CROSS ${MP_DIR}/build/mpy-cross CACHE STRING "")
-set(MPY_TOOL ${MP_DIR}/../tools/mpy-tool.py CACHE STRING "")
-set(MPY_LD ${MP_DIR}/../tools/mpy_ld.py CACHE STRING "")
+set(MP_DIR "${CMAKE_CURRENT_LIST_DIR}/micropython" CACHE STRING "" )
+set(MP_CROSS_DIR ${MP_DIR}/mpy-cross)
+set(MPY_CROSS ${MP_CROSS_DIR}/build/mpy-cross CACHE STRING "")
+set(MPY_TOOL ${MP_DIR}/tools/mpy-tool.py CACHE STRING "")
+set(MPY_LD ${MP_DIR}/tools/mpy_ld.py CACHE STRING "")
 
 
-ExternalProject_Add( mpy_cross
-    SOURCE_DIR ${MP_DIR}
-    BINARY_DIR ${MP_DIR}
-    # No download step
-    # No update
-    # No patch
-    CONFIGURE_COMMAND "" # No configure needed, but must be specified
-    # default build command
-    INSTALL_COMMAND "" # Don't actually install
-    # No test
-)
+#TODO: This should already be compiled... where is it?
+function(check_mpy_cross)
+    if (NOT TARGET mpy_cross)
+        ExternalProject_Add( mpy_cross
+            SOURCE_DIR ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/micropython/mpy-cross
+            BINARY_DIR ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/micropython/mpy-cross
+            # No download step
+            # No update
+            # No patch
+            CONFIGURE_COMMAND "" # No configure needed, but must be specified
+            # default build command
+            INSTALL_COMMAND "" # Don't actually install
+            # No test
+        )
+    endif()
+endfunction()
+
 
 function(add_mpy_py TARGET FILE)
+    check_mpy_cross()
     set(output_file ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}.mpy)
     add_custom_command(
         OUTPUT ${output_file}
@@ -45,33 +53,29 @@ function(add_mpy_py TARGET FILE)
 endfunction()
 
 
-function(add_mpy_c TARGET)
+function(add_mpy_c_module TARGET)
 
-
-    # preprocess all source files
-    add_custom_command(
-        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}_config.h
-        COMMAND ${MPY_LD} --arch armv7 --preprocess -o ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}_config.h ${ARGN}
+    set(MUTLI_VALUE_ARGS SRC INCLUDE DEPS)
+    cmake_parse_arguments(PARSE_ARGV 1 MPY_C "" "" "${MUTLI_VALUE_ARGS}")
+    
+    add_library(
+        ${TARGET} INTERFACE
     )
-    set(TARGET_O_FILES) # declare it here
-    # build .o from .c
-    foreach(file in ${ARGN})
-        add_custom_command(
-            OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${file}.o
-            COMMAND ${CMAKE_C_COMPILER} -mthumb -mcpu=cortex-m0plus ${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE}} -I${MP_DIR}/../ -I${MP_DIR}/../ports/rp2/ -o ${CMAKE_CURRENT_BINARY_DIR}/${file}.o ${file}
+
+    target_sources( 
+        ${TARGET} INTERFACE
+        ${MPY_C_SRC}
+    )
+
+    if(NOT "${MPY_C_INCLUDE}" STREQUAL "" )
+        target_include_directories(
+            ${TARGET}
+            ${MPY_C_INCLUDE}
         )
-        list(APPEND TARGET_O_FILES ${CMAKE_CURRENT_BINARY_DIR}/${file}.o)
-    endforeach()
+    endif()
 
-    # link
-    add_custom_command(
-        DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}_config.h ${TARGET_O_FILES}
-        COMMAND ${MPY_LD} --arch armv7 --qstrs ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}_config.h -o ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.native.mpy ${TARGET_O_FILES}
-        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.native.mpy
-    )
+    target_link_libraries(${TARGET} PRIVATE ${DEPS})
 
-    add_custom_target(
-        ${TARGET} ALL
-        DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.native.mpy
-    )
+    target_link_libraries(usermod INTERFACE ${TARGET})
+
 endfunction()
