--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -12,7 +12,10 @@ target_link_libraries(can2040 PUBLIC pico_stdlib cmsis_core)
 
 add_library(
     can2040_interface INTERFACE
-    can2040/src/can2040.c
+)
+target_sources(
+    can2040_interface INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/can2040/src/can2040.c
 )
 target_include_directories(can2040_interface INTERFACE ${CMAKE_CURRENT_LIST_DIR}/can2040/src/)
 
