--- a/firmware/py/can2040_py/CMakeLists.txt
+++ b/firmware/py/can2040_py/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_mpy_c_module(can2040_py SRC ${CMAKE_CURRENT_SOURCE_DIR}/can2040_bindings.c DEPS can2040_interface)
+# This WOULD have the nice code to build this module, but micropython is dumb
+
