--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/micropython"]
 	path = deps/micropython
 	url = ../../micropython/micropython.git
+[submodule "deps/micropython-lib"]
+	path = deps/micropython-lib
+	url = git@github.com:linted/micropython-lib.git
