--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install deps
       # Install all the deps we need to actually build this
-      run: apt-get update && apt-get install -y gcc-arm-none-eabi python3-pyelftools
+      run: sudo apt-get update && sudo apt-get install -y gcc-arm-none-eabi python3-pyelftools
 
     - name: Build
       # Build your program with the given configuration
