um... trying to do a release thing?

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,3 +30,9 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: ${{github.workspace}}/build.sh
+
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: Release Artifacts
+        path: release/
