--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,6 +33,11 @@ jobs:
       # Build your program with the given configuration
       run: ${{github.workspace}}/build.sh
 
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Release Artifacts
+        path: release/
+
   release:
     name: Release pushed tag
     if: startsWith(github.ref, 'refs/tags/v')
