--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Release Artifacts
+          path: release/
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
