--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,4 +57,4 @@ jobs:
           gh release create "$tag" \
               --repo="$GITHUB_REPOSITORY" \
               --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
-              --generate-notes release/
+              --generate-notes release/*
